--- a/EntityFramework.BulkExtensions/EntityFramework.BulkExtensions.csproj
+++ b/EntityFramework.BulkExtensions/EntityFramework.BulkExtensions.csproj
@@ -32,10 +32,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>EntityFramework.BulkExtensions.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>
+    </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
@@ -57,7 +58,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="EntityFramework.BulkExtensions.pfx" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="..\BulkExtensions.Shared\BulkExtensions.Shared.projitems" Label="Shared" />
